Fix gap at end of page CSS

--- a/src/styles/editor.module.css
+++ b/src/styles/editor.module.css
@@ -3,13 +3,17 @@
   background-color: var(--editor-background);
   height:100vh;
   caret-color:var(--caret);
+
+  display:flex;
+  flex-direction: column;
 }
 
 .editorContainer {
   padding: 10px;
   display:flex;
   flex-direction: column;
-  height:100%;
+  /* height:100%; */
+  flex-grow: 1;
 }
 
 .topBar {
@@ -54,6 +58,8 @@
 .noteEditor {
   /* flex-basis:300px; */ /*This sets the min height of the box as 300px, but it causes empty space at the end of the box*/
   flex-grow: 1;
+  display:flex;
+  flex-direction: column;
 }
 
 
